cleaned up a lot of code, and separated notebooks into train and eval

--- a/fonttopng.ipynb
+++ b/fonttopng.ipynb
@@ -7,16 +7,23 @@
    "outputs": [],
    "source": [
     "from os import path, mkdir\n",
-    "\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "from freetype import *\n",
-    "\n",
+    "from freetype import *"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def save_fonts(ttf_path, idx, save_dir, font_size=48, img_size=128):\n",
     "    if not path.exists(save_dir):\n",
     "        print('not exist')\n",
     "        mkdir(save_dir)\n",
     "\n",
+    "    # load the font\n",
     "    face = Face(ttf_path)\n",
     "    face.set_pixel_sizes(font_size, font_size)\n",
     "    slot = face.glyph\n",
@@ -25,6 +32,8 @@
     "    alphabet = 'ABCDEFGHIJKLMNOPQRSTUVWXYZ'\n",
     "\n",
     "    save_files = []\n",
+    "    \n",
+    "    # load each letter in the alphabet\n",
     "    for i, c in enumerate(alphabet):\n",
     "        face.load_char(c)\n",
     "        bitmap = slot.bitmap\n",
@@ -36,41 +45,39 @@
     "        y = (img_size - w) // 2\n",
     "        \n",
     "        if h > 64 or w > 64:\n",
-    "#             print(h, w)\n",
     "            return -1\n",
-    "\n",
-    "#         if h < 20 or w < 20:\n",
-    "#             print(h, w)\n",
     "\n",
     "        if not path.exists(path.join(save_dir, f'{c}')):\n",
     "            mkdir(path.join(save_dir, f'{c}'))\n",
     "\n",
     "        imgpath = path.join(save_dir, f'{c}', f'{idx}')\n",
     "        img = np.zeros((img_size, img_size, 1), dtype='uint8')\n",
-    "\n",
+    "        \n",
+    "        # copy the font to the middle of the image\n",
     "        temp = np.reshape(bitmap.buffer[:h*w], (h, w))\n",
     "        try:\n",
     "            img[x:x+h, y:y+w, 0] = temp\n",
     "        except ValueError:\n",
-    "            os.remove(ttf_path)\n",
     "            print(ttf_path)\n",
     "            return -2\n",
     "\n",
-    "        #plt.imsave(imgpath, img, cmap='gray')\n",
-    "\n",
     "        save_files.append((imgpath, img))\n",
-    "#         if w == 0 or h == 0:\n",
-    "#             print(ttf_path)\n",
-    "#             plt.imshow(img, cmap='gray')\n",
-    "#             plt.show()\n",
     "\n",
+    "    # save if no characters returned early\n",
     "    for (impath, img) in save_files:\n",
     "        np.save(imgpath, img)\n",
     "\n",
-    "    return 0\n",
-    "\n",
+    "    return 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def main():\n",
-    "    count = 0\n",
+    "    c1 = 0\n",
     "    c2 = 0\n",
     "    f = open('fonts.csv', 'w')\n",
     "    idx = 0\n",
@@ -78,7 +85,7 @@
     "        if entry.is_file():\n",
     "            ret = save_fonts(entry.path, idx, './images')\n",
     "            if ret == -1:\n",
-    "                count+=1\n",
+    "                c1 += 1\n",
     "            elif ret == -2:\n",
     "                c2 += 1\n",
     "            else:\n",
@@ -86,8 +93,8 @@
     "                f.write(f'{idx} {entry.path}\\n')\n",
     "\n",
     "    f.close()\n",
-    "    print(f'count is {count}')\n",
-    "    print(f'c2 is {c2}')"
+    "    print(f'fonts that were too large is {count}')\n",
+    "    print(f'exception thrown is {c2}')"
    ]
   },
   {
@@ -125,7 +132,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.5"
+   "version": "3.7.9"
   }
  },
  "nbformat": 4,
