--- a/eval.ipynb
+++ b/eval.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,20 +93,20 @@
     "    def __getitem__(self, idx):\n",
     "        if torch.is_tensor(idx):\n",
     "            idx = idx.tolist()\n",
-    "\n",
     "        sample = {}\n",
     "        for c in alphabet:\n",
     "            path = os.path.join(self.root_dir, c, f'{idx}.npy')\n",
     "            img = np.load(path)\n",
     "            img = img[img_size//2:img_size//2 + img_size, img_size//2:img_size//2 + img_size, :]\n",
     "            img = self.transform(img)\n",
+    "            sample[c] = img\n",
     "\n",
     "        return sample"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -223,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -241,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -260,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -277,35 +277,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "EncoderDecoder(\n",
-       "  (conv01): Conv2d(1, 8, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
-       "  (conv12): Conv2d(8, 16, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
-       "  (conv23): Conv2d(16, 32, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
-       "  (conv33): Conv2d(32, 32, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
-       "  (conv32): Conv2d(32, 26, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
-       "  (conv0same): Conv2d(26, 26, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
-       "  (pool): MaxPool2d(kernel_size=2, stride=2, padding=0, dilation=1, ceil_mode=False)\n",
-       "  (unpool): MaxUnpool2d(kernel_size=(2, 2), stride=(2, 2), padding=(0, 0))\n",
-       "  (relu): ReLU(inplace=True)\n",
-       "  (leakyrelu): LeakyReLU(negative_slope=0.2, inplace=True)\n",
-       "  (sigmoid): Sigmoid()\n",
-       "  (tanh): Tanh()\n",
-       "  (threshold): Threshold(threshold=0, value=0)\n",
-       "  (gaussian_filter): Conv2d(26, 26, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), groups=26, bias=False)\n",
-       ")"
-      ]
-     },
-     "execution_count": 29,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "encdec = EncoderDecoder()\n",
     "encdec.load_state_dict(torch.load(model_file, map_location=torch.device('cpu')))\n",
@@ -321,30 +295,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "KeyError",
-     "evalue": "'R'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-30-09c940a4ac85>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      3\u001b[0m     \u001b[0mfig_letter\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'X'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m     \u001b[0mfig\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mplt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfigure\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfigsize\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m8\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m8\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m     \u001b[0moutput\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mencdec\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'R'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      6\u001b[0m     \u001b[0mfig\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0madd_subplot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m     \u001b[0mplt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mimshow\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mfig_letter\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpermute\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdetach\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnumpy\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcmap\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'gray'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mKeyError\u001b[0m: 'R'"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<Figure size 576x576 with 0 Axes>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "#look at result and ground truth side by side\n",
     "for i, data in enumerate(val_data):\n",
@@ -360,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -396,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -407,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -416,6 +369,8 @@
     "sum_L1 = torch.zeros((len(alphabet), val_len))\n",
     "sum_ssim = torch.zeros((len(alphabet), val_len))\n",
     "for i, data in enumerate(val_data):\n",
+    "    if i > 500:\n",
+    "        break\n",
     "    print(i)\n",
     "    output = encdec(data['R'])\n",
     "    \n",
@@ -449,6 +404,45 @@
     "# average by alphabet\n",
     "print('average l1 loss by alphabet', np.mean(l1, axis=1))\n",
     "print('average ssim loss by alphabet', np.mean(ssim, axis=1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "import pickle\n",
+    "\n",
+    "lossD = pickle.load(open('lossD', 'rb'))\n",
+    "loss_disc = pickle.load(open('loss_disc', 'rb'))\n",
+    "loss_l1 = pickle.load(open('loss_l1', 'rb'))\n",
+    "loss_local = pickle.load(open('loss_local', 'rb'))\n",
+    "loss_ssim = pickle.load(open('loss_ssim', 'rb'))\n",
+    "\n",
+    "lossD = list(filter(lambda x: x > 10, lossD))\n",
+    "loss_disc = list(filter(lambda x: x > 10, loss_disc))\n",
+    "loss_l1 = list(filter(lambda x: x > 1, loss_l1))\n",
+    "loss_local = list(filter(lambda x: x > 10, loss_local))\n",
+    "loss_local = [x / 26 / 3 for x in loss_local]\n",
+    "loss_ssim = list(filter(lambda x: x > 1, loss_ssim))\n",
+    "\n",
+    "plt.plot(lossD)\n",
+    "plt.show()\n",
+    "\n",
+    "plt.plot(loss_disc)\n",
+    "plt.show()\n",
+    "\n",
+    "plt.plot(loss_l1)\n",
+    "plt.show()\n",
+    "\n",
+    "plt.plot(loss_local)\n",
+    "plt.show()\n",
+    "\n",
+    "plt.plot(loss_ssim)\n",
+    "plt.show()"
    ]
   }
  ],
